--- a/app/views/quotes/details.scala.html
+++ b/app/views/quotes/details.scala.html
@@ -1,7 +1,13 @@
 @(quote: Quote)(implicit flash: Flash, lang: Lang)
 
 @main(Messages("Quote.details", quote.text)) {
-  <dl>
+  
+  <h2>
+  
+  @Messages("quotes.details", quote.text)
+  </h2>
+  
+  <dl class="quotes">
     <dt>@Messages("id"):</dt>
     <dd>@quote.id</dd>
     <dt>@Messages("text"):</dt>
