--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,25 +4,35 @@
 
 <html>
     <head>
+        <meta charset="utf-8">
         <title>@title</title>
         
         <!-- Style Sheet that will override TWITTER BOOTSTRAP -->
-        
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-   
-        <!-- JAVASCRIPT -->   
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        
+         
         <!-- FAVICON -->
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        
+               
         <!-- TWITTER BOOTSTRAP -->
+        
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-responsive.min.css")">
-        
+         
+        <!-- JAVASCRIPT -->   
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>               
     </head>
     <body>
-    
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          </button>
+           <a class="brand" href="#">Quotes</a>
+        </div>
+      </div>
+    </div>  
+      
+      
        @if(flash.get("success").isDefined){
        	  @flash.get("success")
        }
@@ -33,6 +43,9 @@
     
       <div class="container">
         @content
-      </div>  
+      </div> 
+      
+
+         
     </body>
 </html>
