--- a/app/views/quotes/editQuote.scala.html
+++ b/app/views/quotes/editQuote.scala.html
@@ -4,12 +4,12 @@
 @import helper.twitterBootstrap._
 
 @main(Messages("quotes.form")) {
-  <h2>@Messages("quotes.form")</h2>
+ <!--  <h2>@Messages("quotes.form")</h2> --> 
     @helper.form(action = routes.Quotes.save()) {
     <fieldset>
 
 ￼￼      <legend>
-          @Messages("quotes.details", Messages("quotes.new"))
+       <!--   @Messages("quotes.details", Messages("quotes.new")) -->  
       </legend>
               @helper.inputText(quoteForm("id"))
               @helper.inputText(quoteForm("text"))
