--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,16 +22,22 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>               
     </head>
     <body>
+    
+     <div class="container">
             
        @if(flash.get("success").isDefined){
+       	<div class="alert alert-success">
        	  @flash.get("success")
+       	</div>  
        }
     
        @if(flash.get("error").isDefined){
+       	 <div class="alert alert-error">
        	  @flash.get("error")
+       	 </div> 
        }
     
-      <div class="container">
+ 
         @content
       </div> 
               
